# constraints-registry-mcp

./: CHANGELOG.md  CONTRACTS.md  README.md  TRACEABILITY.md  pyproject.toml  registry.config.yaml  server.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
deploy/: com.cregistry.mcp.plist
docs/: MCP_CONTRACT.md  RUNNING.md
scenarios/no-false-conflict/org/constraints/: adr.yaml
scenarios/no-false-conflict/security/constraints/: kms.yaml
src/cregistry/: mcp_server.py  precedence.py  scope.py  service.py  store.py
src/cregistry/engine/adapters/checkov/: README.md  __init__.py  adapter.py  importer.py
src/cregistry/engine/adapters/checkov/_fixtures/: fail.json  pass.json  policy.yaml
src/cregistry/engine/adapters/sarif/: README.md  __init__.py  _smoke.py
src/cregistry/engine/adapters/sarif/_fixtures/: checkov_sample.json  malformed_sample.json  semgrep_sample.json
src/cregistry/engine/adapters/semgrep/: README.md  __init__.py  importer.py
src/cregistry/engine/adapters/semgrep/_fixtures/: fail.json  pass.json  rule.yaml
src/cregistry/harness/: run.py
src/cregistry/harness/checks/: mcp.py  namespace.py  reload.py
tests/: conftest.py
tests/adapters/: test_conformance.py  test_e2e.py  test_fail_open.py  test_fixtures.py  test_import.py  test_sarif.py
tests/fixtures/: rule_no_license.yaml
tests/fixtures/semgrep_source/constraints/: no-eval.yaml
