[project]
name = "constraint-registry"
version = "0.0.0"
description = "Constraint Registry V0 — a queryable source of engineering constraints exposed over MCP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "mcp>=1.2",
    "semgrep>=1.168.0",
]

[project.scripts]
# Validation harness (Section 7). Exits non-zero on any failure (VH-OUTPUT-1).
cregistry-harness = "cregistry.harness.run:main"
# Importer CLI — build a bundle from configured sources (FR-SOURCE).
cregistry-import = "cregistry.importer:main"
# MCP server entrypoint (FR-MCP-1).
cregistry-mcp = "cregistry.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cregistry"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
