[project]
name = "constraints-registry"
version = "0.1.0"
description = "Constraint Registry V0 — a queryable source of engineering constraints exposed over MCP."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Suresh Khemka", email = "sureshkhemka@gmail.com" }]
keywords = [
    "mcp", "constraints", "policy-as-code", "governance", "coding-agents",
    "opa", "conftest", "checkov", "semgrep", "sarif",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "mcp>=1.2",
    "semgrep>=1.168.0",
]

[project.urls]
Homepage = "https://github.com/SureshKhemka/constraints-registry"
Repository = "https://github.com/SureshKhemka/constraints-registry"
Issues = "https://github.com/SureshKhemka/constraints-registry/issues"

[project.scripts]
# Validation harness (Section 7). Exits non-zero on any failure (VH-OUTPUT-1).
cregistry-harness = "cregistry.harness.run:main"
# Importer CLI — build a bundle from configured sources (FR-SOURCE).
cregistry-import = "cregistry.importer:main"
# MCP server entrypoint (FR-MCP-1).
cregistry-mcp = "cregistry.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cregistry"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
